# FVGridMaker

./: .gitignore  AI_USAGE.md  CMakeLists.txt  FVGridMaker_cronograma_por_gates.md  FVGridMaker_requisitos.md  FVGridMaker_tree.md  LICENSE.md  README.md
capitulos/: README.md
cmake/: ConfigCompiler.cmake  ConfigDocs.cmake  ConfigExamples.cmake  ConfigInstall.cmake  ConfigLivro.cmake  ConfigManual.cmake  ConfigOptions.cmake  ConfigTargets.cmake  ConfigTests.cmake  ConfigVersion.cmake  version.hpp.in
docs/: Doxyfile.in  api.rst1  conf.py  (+5 more)
examples/: CMakeLists.txt  README.md
examples/ErrorHandling/: Ex_ErrorHandling.cpp  ex_ErrorHandling.cpp
examples/Grid/Grid1D/PrimeiroExemplo/: Ex_PrimeiroExemploGrid1D.cpp
examples/Grid/Grid1D/RandomGrid1D/: Ex_RandomGrid1D.cpp
examples/Grid/Grid1D/UniformGrid1D/: Ex_UniformGrid1D.cpp  RegisterUniform1D.cpp
examples/Grid/Grid2D/: Ex_Malha2D_Cartesiana.cpp
examples/IO/: Ex_ExportaCSV.cpp  Ex_ExportaVTK.cpp
examples/Minimal/: ex_Minimal.cc
examples/OneDimensional/Axis1D/: ex_Axis1D.cc
examples/OneDimensional/Distribution1D/: ex_Custom1D.cc  ex_Random1D.cc  ex_Roberts1D.cc  ex_Uniform1D.cc
examples/OneDimensional/Exercises/: ex_SymmetricRandomWeightedCenters1D.cc
examples/OneDimensional/Grid1D/RandomGrid1D/: Ex_RandomGrid1D.cpp  RegisterRandom1D.cpp
examples/OneDimensional/Grid1D/SimpleCasrtesian/: Ex_SimpleCartesian.cpp
examples/OneDimensional/Operations1D/: ex_Operations1D.cc
examples/Output/VTK/: ex_LegacyVTKRectilinearGrid2DWriter.cc
examples/TwoDimensional/CoordinateSystems2D/: ex_CoordinateSystems2D.cc  ex_FVMakerGeometry2D.cc
examples/TwoDimensional/Grid2D/: Ex_IndexacaoLinear2D.cpp  Ex_Malha2D_Arruela.cpp
examples/TwoDimensional/Operations2D/: ex_Operations2D.cc
examples/TwoDimensional/Quality2D/: ex_Quality2D.cc
examples/TwoDimensional/StructuredGrid2D/: ex_NonUniformStructuredGrid2D.cc  ex_StructuredGrid2D.cc
tests/: CMakeLists.txt  README.md  tst_Minimal.cc
tests/Core/: tst_ID.cc  tst_PublicUmbrella.cc  tst_StrongTypes.cc  tst_Types.cc  tst_Version.cc
tests/Core/Common/: ut_Common.cpp
tests/Core/Mesh/: ut_Mesh.cpp
tests/Core/Storage/: ut_Storage.cpp
tests/ErrorHandling/: tst_BuiltInErrors.cc  tst_ErrorCatalog.cc  tst_ErrorCodes.cc  tst_ErrorContext.cc  tst_ErrorDescriptor.cc  tst_ErrorRecord.cc  tst_ErrorTraits.cc  tst_FVGridException.cc  tst_ThrowError.cc
tests/ErrorHandling/CoreErrors/: ut_CoreErrors.cpp
tests/ErrorHandling/ErrorHandling/: ut_ErrorHandling.cpp
tests/ErrorHandling/ErrorManager/: ut_ErrorManager.cpp
tests/ErrorHandling/ErrorRecord/: ut_ErrorRecord.cpp
tests/ErrorHandling/ErrorTraits/: ut_ErrorTraits.cpp
tests/ErrorHandlingOld/Detail/: ut_Detail.cpp
tests/ErrorHandlingOld/ErrorConfig/: ut_ErrorConfig.cpp
tests/ErrorHandlingOld/ErrorHandling/: ut_ErrorHandling.cpp
tests/ErrorHandlingOld/FileErrors/: ut_FileErrors.cpp
tests/ErrorHandlingOld/GridError/: ut_GridErrors.cpp
tests/ErrorHandlingOld/IErrorLogger/: ut_IErrorLogger.cpp
tests/ErrorHandlingOld/Language/: ut_Language.cpp
tests/ErrorHandlingOld/Severity/: ut_Severity.cpp
tests/ErrorHandlingOld/Status/: ut_Status.cpp
tests/Grid/Boundaries/: ut_BoundaryTags.cpp
tests/Grid/Centering/: ut_Centering.cpp
tests/Grid/Distribution/: ut_Distribution.cpp
tests/Grid/GhostCells/: ut_GhostCells.cpp
tests/Grid/Grid1D/API/: ut_Grid1D.cpp
tests/Grid/Grid1D/Builders/DistributionRegistry/: RegisterDefaults_DistributionRegistry.cpp  ut_DistributionRegistry.cpp
tests/Grid/Grid1D/Common/Tags1D/: ut_Tags1D.cpp
tests/Grid/Grid1D/Discretization/CellCentered/: ut_CellCentered.cpp
tests/Grid/Grid1D/Geometry/Cartesian/: ut_Cartesian.cpp
tests/Grid/Grid1D/RandomGrid1D/: RegisterRandom1D.cpp  ut_RandomGrid1D.cpp
tests/Grid/Grid1D/UniformGrid1D/: RegisterUniform1D.cpp  ut_UniformGrid1D.cpp
tests/Grid/Grid1D/Utils/Grid1DStats/: ut_Grid1DStats.cpp
tests/Grid/Grid2D/API/: ut_Grid2D.cpp
tests/Grid/Grid2D/Geometry/: ut_Annular2D.cpp  ut_Cartesian2D.cpp
tests/Grid/Grid2D/Indexing/: ut_LinearIndex2D.cpp
tests/Grid/Grid2D/Metrics/: ut_Metrics2D.cpp
tests/Grid/Iterator/GridIteratorss/: ut_GridIterators.cpp
tests/IO/CSVWriter/: ut_CSVWriter.cpp
tests/IO/VTKLegacyWriter/: ut_VTKLegacyWriter.cpp
tests/IO/VTKWriter/: ut_VTKWriter.cpp
tests/OneDimensional/Axis1D/: tst_Axis1D.cc  tst_Axis1DInvariants.cc
tests/OneDimensional/Distribution1D/: tst_Custom1D.cc  tst_Random1D.cc  tst_Roberts1D.cc  tst_Uniform1D.cc
tests/OneDimensional/GridPattern1D/: tst_CentersFromFaces1D.cc  tst_ConstantWeight1D.cc  tst_CoordinateTags1D.cc  tst_Coordinates1D.cc  tst_Domain1D.cc  tst_FacesFromCenters1D.cc  tst_GridPattern1D.cc
tests/OneDimensional/Operations1D/: tst_Operations1D.cc
tests/Output/CSV/: tst_Axis1DCSVWriter.cc
tests/Output/VTK/: tst_LegacyVTKRectilinearGrid2DWriter.cc  tst_LegacyVTKStructuredGrid2DWriter.cc  tst_MappedVTKGrid2D.cc
tests/ScalarTypes/: tst_ScalarTemplates.cc
tests/TwoDimensional/Operations2D/: tst_Operations2D.cc
tests/TwoDimensional/Quality2D/: tst_Quality2D.cc
tests/TwoDimensional/StructuredGrid2D/: tst_CoordinateMeasureInvariants2D.cc  tst_CoordinateMeasures2D.cc  tst_StructuredGrid2D.cc
(+282 files in other folders)
